Tue Apr 05 00:46:34 BST 2005  Olly Betts <olly@survex.com>

	* perl/.cvsignore,db/.cvsignore,map/xmlxx/.cvsignore,
	  map/include/.cvsignore,map/map_algorithm/.cvsignore,
	  map/aligned_diff/.cvsignore,map/range/.cvsignore,
	  map/html_writer/.cvsignore,map/cvs_parser/.cvsignore,
	  map/diff/.cvsignore,map/.cvsignore,map/alignment/.cvsignore,
	  map/process/.cvsignore,.cvsignore: Remove .cvsignore files, as
	  they're not used by SVN.

Fri Dec 17 22:21:13 GMT 2004  Olly Betts <olly@survex.com>

	* perl/: Tidied HTML output.

Fri Dec 17 22:00:18 GMT 2004  Olly Betts <olly@survex.com>

	* perl/: Factor out widely used highlightquery() into a common function
	  in Cvssearch.pm.

Fri Dec 17 01:46:21 GMT 2004  Olly Betts <olly@survex.com>

	* perl/PatternBrowser-script.pl: Convert raw "&" in HTML output to
	  "&amp;".

Fri Dec 17 01:42:25 GMT 2004  Olly Betts <olly@survex.com>

	* perl/MatchComment-script.pl,perl/MatchFile-script.pl: Don't use
	  OUTPUT as a filehandle for a file we're *reading*.

Fri Dec 17 01:38:17 GMT 2004  Olly Betts <olly@survex.com>

	* perl/: Regularise "Content-Type:" headers.

Fri Dec 17 01:28:27 GMT 2004  Olly Betts <olly@survex.com>

	* perl/Source-script.pl,perl/SourceComment-script.pl,
	  perl/Top-script.pl: HTML has a <head> tag, not a <header> tag.

Fri Dec 17 01:24:32 GMT 2004  Olly Betts <olly@survex.com>

	* perl/: Sanitise root parameter to all CGI scripts.  It should always
	  be of the form "root<number>".

Fri Dec 10 02:19:06 GMT 2004  Olly Betts <olly@survex.com>

	* perl/Logo-script.pl: use strict; call handle IMG not GIF; better
	  error message.

Fri Dec 10 01:57:25 GMT 2004  Olly Betts <olly@survex.com>

	* db/Makefile.am: Build system changes to go with the previous change.

Thu Dec 09 17:50:17 GMT 2004  Olly Betts <olly@survex.com>

	* db/: Factored out duplicated stoplist code into stoplist.C and
	  stoplist.h; char * parameters -> const char * where appropriate;