@@ -1,1 +1,7 @@
+## Process this file with automake to produce Makefile.in
+
+# We need at least 1.6.3 for AM_INIT_AUTOMAKE with no args
+# 1.8.5 contains a lot of fixes over 1.6.3
+AUTOMAKE_OPTIONS = 1.8.5
+
 SUBDIRS = db map perl
